--- a/heterogeneous_system_integrator/heterogeneous_system_integrator/templates/admin/app_list.html
+++ b/heterogeneous_system_integrator/heterogeneous_system_integrator/templates/admin/app_list.html
@@ -1,80 +1,105 @@
 {% load i18n %}
-
-{% if app_list %}
-    {% for app in app_list %}
-        {% if app.app_label == "heterogeneous_system_integrator" %}
-            <div class="app-heterogeneous_system_integrator module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
-            <table>
-            <caption>
-                <a class="section" title="Models in the heterogeneous_system_integrator application">Synchronizations configuration</a>
-            </caption>
-            {% for model in app.models %}
-                {% with model_name=model.object_name|lower %}
-                    <tr class="model-{{ model_name }}{% if model.admin_url in request.path|urlencode %} current-model{% endif %}">
-                    <th scope="row" id="heterogeneous_system_integrator-{{ model_name }}">
-                        {% if model.admin_url %}
-                        <a href="{{ model.admin_url }}"{% if model.admin_url in request.path|urlencode %} aria-current="page"{% endif %}>{{ model.name }}</a>
-                        {% else %}
-                        {{ model.name }}
-                        {% endif %}
-                    </th>
-
-                    {% if model.add_url%}
-                        <td><a href="{{ model.add_url }}" class="addlink" aria-describedby="{{ app.app_label }}-{{ model_name }}">{% translate 'Add' %}</a></td>
-                    {% else %}
+{% with transmission_models='apiconnection,dbconnection,ftpconnection,apidatalocation,dbdatalocation,ftpdatalocation' manipulation_models='conversion,mapping,filter' synchronization_models='transferstep,transformstep,subtask,asynctask' schedule_models='plannedtask,period,periodictask' %}
+    {% if not app_list %}
+        <p>{% translate 'You don’t have permission to view or edit anything.' %}</p>
+    {% else %}
+        {% for app in app_list %}
+            {% if app.app_label != "heterogeneous_system_integrator" %}
+                <div class="app-celery module">
+                <table>
+                <caption>
+                    <a class="section" title="Monitoring options">EXECUTION</a>
+                </caption>
+                {% for model in app.models %}
+                    {% with model_name=model.object_name|lower %}
+                        <tr class="model-{{ model_name }}{% if model.admin_url in request.path|urlencode %} current-model{% endif %}">
+                        <th scope="row" id="heterogeneous_system_integrator-{{ model_name }}">
+                            {% if model.admin_url %}
+                            <a href="{{ model.admin_url }}"{% if model.admin_url in request.path|urlencode %} aria-current="page"{% endif %}>{{ model.name }}</a>
+                            {% else %}
+                            {{ model.name }}
+                            {% endif %}
+                        </th>
                         <td></td>
-                    {% endif %}
-
-                    {% if model.admin_url and show_changelinks %}
-                        {% if model.view_only %}
-                        <td><a href="{{ model.admin_url }}" class="viewlink" aria-describedby="{{ app.app_label }}-{{ model_name }}">{% translate 'View' %}</a></td>
+                        {% if model.admin_url and show_changelinks and model.view_only%}
+                            <td><a href="{{ model.admin_url }}" class="viewlink" aria-describedby="{{ app.app_label }}-{{ model_name }}">{% translate 'View' %}</a></td>
                         {% else %}
-                        <td><a href="{{ model.admin_url }}" class="changelink" aria-describedby="{{ app.app_label }}-{{ model_name }}">{% translate 'Change' %}</a></td>
+                            <td></td>
                         {% endif %}
-                    {% elif show_changelinks %}
-                        <td></td>
-                    {% endif %}
-                    </tr>
-                {% endwith %}
-            {% endfor %}
-            </table>
-            </div>
-        {% else %}
-            <div class="app-celery module">
-            <table>
-            <caption>
-                <a class="section" title="Monitoring options">Synchronizations execution</a>
-            </caption>
-            {% for model in app.models %}
-                {% with model_name=model.object_name|lower %}
-                    <tr class="model-{{ model_name }}{% if model.admin_url in request.path|urlencode %} current-model{% endif %}">
-                    <th scope="row" id="heterogeneous_system_integrator-{{ model_name }}">
-                        {% if model.admin_url %}
-                        <a href="{{ model.admin_url }}"{% if model.admin_url in request.path|urlencode %} aria-current="page"{% endif %}>{{ model.name }}</a>
-                        {% else %}
-                        {{ model.name }}
+                        </tr>
+                    {% endwith %}
+                {% endfor %}
+                <tr class="model-taskresult">
+                <th scope="row" id="heterogeneous_system_integrator-taskresult">
+                <a href="{{ monitor_url }}">Monitoring</a>
+                </th>
+                <td></td>
+                <td></td>
+                </tr>
+                </table>
+                </div>
+            {% else %}
+                <div class="app-heterogeneous_system_integrator module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
+                <table>
+                    <caption>
+                        <a class="section"
+                           title="Models in the heterogeneous_system_integrator application">
+                            TRANSMISSION
+                        </a>
+                    </caption>
+                    {% for model in app.models %}
+                        {% if model.object_name|lower in transmission_models %}
+                            {% include 'admin/model_row.html' with app=app model=model show_changelinks=False %}
                         {% endif %}
-                    </th>
-                    <td></td>
-                    {% if model.admin_url and show_changelinks and model.view_only%}
-                        <td><a href="{{ model.admin_url }}" class="viewlink" aria-describedby="{{ app.app_label }}-{{ model_name }}">{% translate 'View' %}</a></td>
-                    {% else %}
-                        <td></td>
-                    {% endif %}
-                    </tr>
-                {% endwith %}
-            {% endfor %}  
-            <tr class="model-taskresult">
-            <th scope="row" id="heterogeneous_system_integrator-taskresult">
-            <a href="{{ monitor_url }}">Monitoring page</a>
-            </th>
-            <td></td>
-            <td></td>
-            </tr>  
-            </table>
-            </div>
-        {% endif %}
-    {% endfor %}
-{% else %}
-    <p>{% translate 'You don’t have permission to view or edit anything.' %}</p>
-{% endif %}
+                    {% endfor %}
+                </table>
+                </div>
+                <div class="app-heterogeneous_system_integrator module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
+                <table>
+                    <caption>
+                        <a class="section"
+                           title="Models in the heterogeneous_system_integrator application">
+                            MANIPULATION
+                        </a>
+                    </caption>
+                    {% for model in app.models %}
+                        {% if model.object_name|lower in manipulation_models %}
+                            {% include 'admin/model_row.html' with app=app model=model show_changelinks=False %}
+                        {% endif %}
+                    {% endfor %}
+                </table>
+                </div>
+                <div class="app-heterogeneous_system_integrator module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
+                <table>
+                    <caption>
+                        <a class="section"
+                           title="Models in the heterogeneous_system_integrator application">
+                            SYNCHRONIZATION
+                        </a>
+                    </caption>
+                    {% for model in app.models %}
+                        {% if model.object_name|lower in synchronization_models %}
+                            {% include 'admin/model_row.html' with app=app model=model show_changelinks=False %}
+                        {% endif %}
+                    {% endfor %}
+                </table>
+                </div>
+                <div class="app-heterogeneous_system_integrator module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
+                <table>
+                    <caption>
+                        <a class="section"
+                           title="Models in the heterogeneous_system_integrator application">
+                            SCHEDULE
+                        </a>
+                    </caption>
+                    {% for model in app.models %}
+                        {% if model.object_name|lower in schedule_models %}
+                            {% include 'admin/model_row.html' with app=app model=model show_changelinks=False %}
+                        {% endif %}
+                    {% endfor %}
+                </table>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+{% endwith %}
