--- a/heterogeneous_system_integrator/heterogeneous_system_integrator/templates/admin/submit_line.html
+++ b/heterogeneous_system_integrator/heterogeneous_system_integrator/templates/admin/submit_line.html
@@ -11,7 +11,7 @@
 {% endif %}
 {% if show_delete_link and original %}
 {% url opts|admin_urlname:'delete' original.pk|admin_urlquote as delete_url %}
-    {% if opts.model_name == 'asynctask' %}<input style="background-color:#04AA6D;" type="submit" value="{% translate 'Execute' %}" class="deletelink" name="_execute">{% endif %}
+    {% if opts.model_name == 'asynctask' %}<input style="background-color:#04AA6D;" type="submit" value="{% translate 'Execute' %}" name="_execute">{% endif %}
     <a href="{% add_preserved_filters delete_url %}" class="deletelink">{% translate "Delete" %}</a>
 {% endif %}
 {% endblock %}
