--- a/heterogeneous_system_integrator/heterogeneous_system_integrator/templates/admin/base.html
+++ b/heterogeneous_system_integrator/heterogeneous_system_integrator/templates/admin/base.html
@@ -12,7 +12,21 @@
   <link rel="stylesheet" href="{% static 'admin/css/nav_sidebar.css' %}">
   <script src="{% static 'admin/js/nav_sidebar.js' %}" defer></script>
 {% endif %}
-{% block extrastyle %}{% endblock %}
+{% block extrastyle %}
+<style>
+  div .title {
+    text-align:center;
+    text-transform:uppercase;
+    font-size:26px; letter-spacing:1px;
+    margin: 10px;
+    padding: 10px;
+    display: inline-block;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 16px 0;
+    grid-gap: 22px;
+  }
+</style>
+{% endblock %}
 {% if LANGUAGE_BIDI %}<link rel="stylesheet" href="{% block stylesheet_rtl %}{% static 'admin/css/rtl.css' %}{% endblock %}">{% endif %}
 {% block extrahead %}{% endblock %}
 {% block responsive %}
@@ -32,7 +46,7 @@
     {% if not is_popup %}
     <!-- Header -->
     {% block header %}
-      <header id="header">
+      <header id="header" style="padding: 40px;">
         <div id="branding">
         {% block branding %}{% endblock %}
         </div>
